--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -26,3 +26,33 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.heading {
+  /* width: 100%; */
+  padding-right: 50px;
+  padding-left: 50px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+ol {
+  list-style: none;
+  color: #ccc;
+}
+
+ol li {
+  font: bold 24pt helvetica, arial, sans-serif;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+li p {
+  font: 12pt helvetica, arial, sans-serif;
+  color: #555;
+  padding-left: 60px;
+}
+
+span {
+  position: absolute;
+  line-height: 25px;
+}
+  
